--- a/Ls.Css
+++ b/Ls.Css
@@ -1,326 +1,212 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
-*{
+  * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
- }
+}
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     font-family: 'Poppins', sans-serif;
-    color: aliceblue;
-    background-image: url("fundo1.jpg");
+    color: rgb(255, 255, 255);
+    background-image: url("ensaiols3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-
-
-
+    display: flex;
+    flex-direction: column; /* Alinha os elementos na coluna */
+    align-items: center; /* Centraliza horizontalmente */
+    justify-content: flex-start; /* Alinha os elementos no topo */
+    height: 100vh; /* Ocupa 100% da altura da janela */
+    padding-top: 20px; /* Adiciona um espaço no topo */
 }
 
-
-
-
-
-#person .bloco-img {
-    height: 150vh;
-    width: 810px;
- 
-    margin-bottom: 50px;
-    margin-top: 50px;
-    margin-left: 350px;
-    
+#body2 {
+    font-family: 'Poppins', sans-serif;
+    color: rgb(255, 255, 255);
+    background-image: url("ensaiols5.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     display: flex;
-    justify-content: center;
-
-    border: 5px solid #fff;
-    box-shadow: 0 0 15px #d35400;
-
-    
-    
+    flex-direction: column; /* Alinha os elementos na coluna */
+    align-items: center; /* Centraliza horizontalmente */
+    justify-content: flex-start; /* Alinha os elementos no topo */
+    height: 100vh; /* Ocupa 100% da altura da janela */
+    padding-top: 20px; /* Adiciona um espaço no topo */
 }
 
 .titulo {
     font-size: 60px;
     font-family: fontetitulo;
     text-align: center;
-    transform: translate(10px, 30px);
-    
+    margin-bottom: -15px; /* Adiciona espaço abaixo do título */
+    color: white; /* Cor do texto */
+    text-shadow: 
+        -4px -4px 0 #d35400, /* Sombra para o canto superior esquerdo */
+        2px -2px 0 #d35400,  /* Sombra para o canto superior direito */
+        -2px 2px 0 #d35400,  /* Sombra para o canto inferior esquerdo */
+        2px 2px 0 #d35400;   /* Sombra para o canto inferior direito */
 }
 
 
-#btn1 {
+#subt{
+    font-size: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.video-div {
+    padding: 0;
+    width: 790px;
+    text-align: center;
+    margin-bottom: 30px;
+    border: 5px solid #d35400;
+    box-shadow: 0 0 15px #ffffff;
+    margin-top: 20px;
+}
+
+.social-container {
+    display: flex; /* Usa flexbox para alinhar os botões na horizontal */
+    gap: 20px; /* Espaçamento entre os botões */
+    justify-content: center; /* Centraliza os botões horizontalmente */
+    margin-top: 20px; /* Adiciona espaço acima da barra de botões */
+}
+
+.main-btn {
     background-color: black;
-    margin-top: 200px;
-    margin-left: 200px;
-    position: absolute;
-    transform: translate(-50%, -260%);
-    padding: 6px 12px;
-    border: 2px solid #fff;
-    box-shadow: 0 0 15px #d35400;
-
-
-    cursor: pointer;
+    border: 3px solid #d35400;
+    box-shadow: 0 0 15px #000000;
+    color: #ffffff;
+    padding: 10px 15px; /* Ajusta o padding para todos os botões */
     border-radius: 50%;
-    width: 70px;
-    height: 70px;
     font-size: 1.5em;
-       
-}
-
-.fa-brands {
-    color: #EF7527;
-    
-}
-.fa-solid {
-    color: #EF7527;
-}
-
-
-
-
-#btn2 {
-    background-color: black;
-    margin-top: 200px;
-    margin-left: 400px;
-    position: absolute;
-    transform: translate(-50%, -260%);
-    color: white;
-    border: 2px solid #fff;
-    box-shadow: 0 0 15px #d35400;
-    padding: 6px 12px;
     cursor: pointer;
-    border-radius: 50%;
-    width: 70px;
-    height: 70px;
-    font-size: 1.5em;
+    width: 70px; /* Define a largura dos botões */
+    height: 70px; /* Define a altura dos botões */
+    display: flex; /* Permite que o conteúdo do botão seja centralizado */
+    align-items: center; /* Centraliza verticalmente o conteúdo */
+    justify-content: center; /* Centraliza horizontalmente o conteúdo */
     
 }
 
-#btn3 {
-    background-color: black;
-    margin-top: 200px;
-    margin-left: 600px;
-    position: absolute;
-    transform: translate(-50%, -260%);
-    color: white;
-    border: 2px solid #fff;
+.main-btn:hover {
+    background-color: #ffffff; /* Cor de fundo ao passar o mouse */
+}
+
+.button-group {
+    display: solid; /* Usa flexbox para alinhar os botões na horizontal */
+    justify-content: center; /* Centraliza os botões horizontalmente */
+    margin-top: -10px; /* Adiciona espaço acima dos botões retangulares */
+    gap: 20px; /* Espaçamento entre os botões retangulares */
+}
+
+.rect-btn {
+    background-color: #000000; /* Cor de fundo dos botões */
+    color: white; /* Cor da fonte */
+    border: 3px solid #d35400;
     box-shadow: 0 0 15px #d35400;
-    font-size: 1.8em;
-    padding: 6px 12px;
-    cursor: pointer;
-    border-radius: 50%;
-    width: 70px;
-    height: 70px;
-    font-size: 1.5em;
+    padding: 20px 20px; /* Ajusta o padding */
+    border-radius: 5px; /* Arredondamento suave dos cantos */
+    font-size: 18px; /* Tamanho da fonte */
+    cursor: pointer; /* Muda o cursor para pointer */
+    margin: 0 5px; /* Espaço ao redor dos botões */
+    transition: background-color 0.3s; /* Transição suave na cor de fundo */
+    margin-top: 10px;
 }
 
-#btn4 {
-    background-color: black;
-    margin-top: 200px;
-    margin-left: 0px;
-    position: absolute;
-    transform: translate(-50%, -260%);
-    color: white;
-    border: 2px solid #fff;
+.rect-btn:hover {
+    background-color: #c65a00; /* Cor de fundo ao passar o mouse */
+}
+
+
+.fa-brands, .fa-solid {
+    color: #EF7527; /* Aplica a mesma cor para ícones */
+}
+.video-div {
+
+    
+
+}
+
+.image-container {
+    text-align: center; /* Centraliza a imagem */
+    margin-top: 20px; /* Adiciona espaço acima da imagem */
+}
+
+.responsive-image {
+    max-width: 30%; /* Faz a imagem responsiva */
+    height: auto; /* Mantém a proporção da imagem */
+    border: 5px solid #ffffff; /* Borda ao redor da imagem, se desejado */
+    border-radius: 5px; /* Bordas arredondadas */
     box-shadow: 0 0 15px #d35400;
-    font-size: 1.8em;
-    padding: 6px 12px;
-    cursor: pointer;
-    border-radius: 50%;
-    width: 70px;
-    height: 70px;
-    font-size: 1.5em;
 }
 
-#btn5 {
-    background-color: black;
-    margin-top: 200px;
-    margin-left: -200px;
-    position: absolute;
-    transform: translate(-50%, -260%);
-    color: white;
-    border: 2px solid #fff;
+.carousel-container {
+    position: relative; /* Permite posicionar os botões sobre a imagem */
+    max-width: 750px; /* Define uma largura máxima para o carrossel */
+    margin: 20px auto; /* Centraliza o carrossel */
+    overflow: hidden; /* Esconde as imagens que não estão ativas */
+    border: 5px solid #000000; /* Borda ao redor da imagem, se desejado */
+    border-radius: 5px; /* Bordas arredondadas */
     box-shadow: 0 0 15px #d35400;
-    padding: 6px 12px;
-    cursor: pointer;
-    border-radius: 50%;
-    width: 70px;
-    height: 70px;
-    font-size: 1.5em;
 }
 
-#btn6 {
-    background-color: black;
-    margin-top: 200px;
-    margin-left: -400px;
-    position: absolute;
-    transform: translate(-50%, -260%);
-    color: white;
-    border: 2px solid #fff;
-    box-shadow: 0 0 15px #d35400;
-    font-size: 1.8em;
-    padding: 6px 12px;
+.carousel {
+    display: flex; /* Exibe as imagens em linha */
+    transition: transform 0.5s ease; /* Transição suave para o movimento */
+}
 
-    cursor: pointer;
-    border-radius: 50%;
-    width: 70px;
-    height: 70px;
-    font-size: 1.5em;
+.carousel-image {
+    min-width: 100%; /* Cada imagem ocupa 100% da largura do contêiner */
+    height: auto; /* Mantém a proporção da imagem */
+    display: none; /* Esconde todas as imagens inicialmente */
+}
+
+.carousel-image.active {
+    display: block; /* Mostra apenas a imagem ativa */
+}
+
+.carousel-button {
+    position: absolute; /* Posiciona os botões sobre as imagens */
+    top: 50%; /* Alinha os botões verticalmente no meio */
+    transform: translateY(-50%); /* Centraliza verticalmente os botões */
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo semitransparente para os botões */
+    color: white; /* Cor do texto */
+    border: none; /* Remove bordas */
+    padding: 10px; /* Adiciona espaço ao redor do texto */
+    cursor: pointer; /* Muda o cursor para indicar que é clicável */
+}
+
+.carousel-button.prev {
+    left: 10px; /* Botão anterior à esquerda */
+}
+
+.carousel-button.next {
+    right: 10px; /* Botão seguinte à direita */
 }
 
 
-@media screen and (max-width: 768px) {
-
-    body{
-        font-family: 'Poppins', sans-serif;
-        color: aliceblue;
-        background-image: url("fundo1.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+.video-container {
+    display: flex;
+    justify-content: center;
+    gap: 100px; /* Espaço entre as colunas */
+    padding: 20px;
     
-    
-    }
+}
 
-    #person .bloco-img {
-        height: 60vh;
-        width: 340px;
-     
-        margin-bottom: 100px;
-        margin-top: 120px;
-        margin-left: 20px;
-        display: flex;
-
-        
-        border: 5px solid #fff;
-        box-shadow: 0 0 15px #d35400;
-
-
-        
-    }
-
-    .titulo {
-        font-size: 30px;
-        font-family: fontetitulo;
-
-        transform: translate(-10px, 50px);
-
-        
-    }
-
-    #btn1 {
-        background-color: black;
-        margin-top: 200px;
-        position: absolute;
-        transform: translate(-45%, -630%);
-        padding: 6px 12px;
-        border: none;
-        cursor: pointer;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        font-size: 1em;
-           
-    }
-    
-    .fa-brands {
-        color: #EF7527;
-        
-    }
-    .fa-solid {
-        color: #EF7527;
-    }
-    
-    
-    
-    
-    #btn2 {
-        background-color: black;
-        margin-top: 200px;
-
-        position: absolute;
-        transform: translate(-170%, -630%);
-        color: white;
-        padding: 6px 12px;
-        border: none;
-        cursor: pointer;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        font-size: 1.2em;
-    }
-    
-    #btn3 {
-        background-color: black;
-        margin-top: 200px;
-
-        position: absolute;
-        transform: translate(-680%, -630%);
-        color: white;
-        padding: 6px 12px;
-        border: none;
-        cursor: pointer;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        font-size: 1em;
-    }
-    
-    #btn4 {
-        background-color: black;
-        position: absolute;
-        transform: translate(-70%, -630%);
-        color: white;
-        font-size: 1.3em;
-        padding: 6px 12px;
-        border: none;
-        cursor: pointer;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-
-    }
-    
-    #btn5 {
-        background-color: black;
-        margin-top: 200px;
-        margin-left: 0px;
-        position: absolute;
-        transform: translate(-200%, -630%);
-        color: white;
-        font-size: 1rem;
-        padding: 6px 12px;
-        border: none;
-        cursor: pointer;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-    }
-    
-    #btn6 {
-        background-color: black;
-        margin-top: 200px;
-        margin-left: 0px;
-        position: absolute;
-        transform: translate(-340%, -630%);
-        color: white;
-        padding: 6px 12px;
-        border: none;
-        cursor: pointer;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        font-size: 1em;
-    }
-
-    
+.video-column {
+    display: flex;
+    flex-direction: column;
+    gap: 20px; /* Espaço entre os vídeos */
     
 }
 
 
+iframe {
+    border: 5px solid #d35400; /* Adiciona uma borda laranja */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra para um efeito visual agradável */
+}
