--- a/Ls.Css
+++ b/Ls.Css
@@ -379,11 +379,13 @@ iframe {
     .social-container {
         gap: 20px; /* Espaçamento entre os botões */
         margin-top: 20px; /* Adiciona espaço acima da barra de botões */
-        margin-left: -80px;
+        margin-left: 200px;
+        text-align: right;
     }
     
     .main-btn {
-        margin-left: -80px;
+        margin-left: 200px;
+        text-align: right;
         
     }
 
