--- a/Ls.Css
+++ b/Ls.Css
@@ -331,18 +331,7 @@ iframe {
 @media (max-width: 767px) {
 
     body {
-        font-family: 'Poppins', sans-serif;
-        color: rgb(255, 255, 255);
-        background-image: url("ensaiols3.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        display: flex;
-        flex-direction: column; /* Alinha os elementos na coluna */
-        align-items: center; /* Centraliza horizontalmente */
-        justify-content: flex-start; /* Alinha os elementos no topo */
-        height: 100vh; /* Ocupa 100% da altura da janela */
-        padding-top: 20px; /* Adiciona um espaço no topo */
+        overflow-x: hidden; /* Garante que não haverá scroll horizontal */
     }
 
 
@@ -379,7 +368,7 @@ iframe {
     .social-container {
         gap: 20px; /* Espaçamento entre os botões */
         margin-top: 20px; /* Adiciona espaço acima da barra de botões */
-        margin-left: 80px;
+        margin-left: 70px;
 
     }
     
